force-app/main/default/objects/Lead/fields/Preferred_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Electra dealer location this lead prefers for test drives and visits.</description>
    <label>Preferred Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Electra Preferred Leads</relationshipLabel>
    <relationshipName>Electra_Preferred_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>