force-app/main/default/objects/Lead/fields/Test_Drive_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Status__c</fullName>
    <description>Current status of this lead's test drive appointment.</description>
    <label>Test Drive Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmado</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Sin Cita</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>