force-app/main/default/objects/Lead/fields/Vehicle_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Electra vehicle model this lead is interested in.</description>
    <label>Vehicle of Interest</label>
    <referenceTo>Vehicle_Model__c</referenceTo>
    <relationshipLabel>Interested Leads</relationshipLabel>
    <relationshipName>Interested_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>